# goldeneye-tool

./: .cbmignore  .gitattributes  .gitignore  Cargo.toml  NOTICE  THIRD_PARTY.md  flake.nix  go.mod
crates/adapters/goldeneye-artifact/: Cargo.toml
crates/adapters/goldeneye-artifact/src/: database.rs  export.rs  git.rs  import.rs  lib.rs  port.rs  repository.rs  time.rs
crates/adapters/goldeneye-discovery/: Cargo.toml
crates/adapters/goldeneye-discovery/src/: ignore_rules.rs  language.rs  lib.rs  policy.rs  port.rs  walker.rs
crates/adapters/goldeneye-discovery/tests/: discovery_parity.rs  domain_ids.rs  ignore_parity.rs  language_parity.rs  upstream_parity.rs
crates/adapters/goldeneye-git/: Cargo.toml
crates/adapters/goldeneye-git/src/: changes.rs  context.rs  history.rs  lib.rs  port.rs  process.rs  tests.rs
crates/adapters/goldeneye-store/: Cargo.toml
crates/adapters/goldeneye-store/src/: adr.rs  adr_traces.rs  adr_traces_port.rs  codec.rs  cross_project.rs  crosslink_port.rs  edit_port.rs  git_history.rs  git_history_port.rs  graph.rs  graph_support.rs  index_port.rs  journal.rs  lib.rs  project.rs  project_administration_port.rs  query_port.rs  read.rs  read_helpers.rs  repository_factory.rs  semantic.rs  semantic_index_port.rs
crates/adapters/goldeneye-store/tests/: repository_factory.rs  store.rs
crates/adapters/goldeneye-syntax/: Cargo.toml
crates/adapters/goldeneye-syntax/src/: edit_port.rs  engine.rs  full_grammar.rs  inspect.rs  lib.rs  locator.rs
crates/adapters/goldeneye-syntax/tests/: diagnostics.rs  grammar_lock.rs  inspect.rs
crates/adapters/goldeneye-tree-sitter-index/: Cargo.toml
crates/adapters/goldeneye-tree-sitter-index/src/: error.rs  extract.rs  language_specs.rs  lib.rs
crates/application/goldeneye-crosslink/: Cargo.toml
crates/application/goldeneye-crosslink/src/: edges.rs  engine.rs  lib.rs  model.rs  registry.rs
crates/application/goldeneye-edit/: Cargo.toml
crates/application/goldeneye-edit/src/: durable.rs  lib.rs  path_auth.rs
crates/application/goldeneye-edit/tests/: durable.rs  operations.rs  path_auth.rs  planning.rs  stale.rs  validation.rs
crates/application/goldeneye-index/: Cargo.toml
crates/application/goldeneye-index/src/: edit_port.rs  enrichment.rs  extract.rs  hybrid.rs  language_specs.rs  lib.rs  project_graph.rs  service.rs  types.rs
crates/application/goldeneye-index/tests/: fast_index.rs  full_language_corpus.rs  index_modes.rs
crates/application/goldeneye-query/: Cargo.toml
crates/application/goldeneye-query/src/: ast_profile.rs  cypher.rs  engine.rs  search_code.rs  semantic.rs  semantic_query.rs  types.rs
crates/application/goldeneye-query/tests/: cypher_core_parity.rs  cypher_multiclause_parity.rs  cypher_scalar_case_parity.rs  cypher_union_unwind_parity.rs  semantic_search.rs  snippet.rs
crates/application/goldeneye-services/: Cargo.toml
crates/application/goldeneye-services/src/: adr_traces.rs  configuration.rs  dependencies.rs  edit.rs  error.rs  git.rs  indexing.rs  lib.rs  queries.rs  semantic_index.rs
crates/application/goldeneye-services/tests/: adr_traces.rs  git_changes.rs  services.rs
crates/delivery/goldeneye-bootstrap/: Cargo.toml
crates/delivery/goldeneye-bootstrap/src/: lib.rs
crates/delivery/goldeneye-bootstrap/tests/: service_indexer.rs
crates/delivery/goldeneye-cli/: Cargo.toml
crates/delivery/goldeneye-cli/src/: lib.rs  main.rs
crates/delivery/goldeneye-cli/tests/: stdio.rs  (+1 more)
crates/delivery/goldeneye-http/: Cargo.toml  build.rs
crates/goldeneye-cli/: Cargo.toml
crates/goldeneye-cli/src/: lib.rs  main.rs
crates/goldeneye-cli/tests/: stdio.rs  stdio_adr_traces.rs  stdio_services.rs
crates/goldeneye-crosslink/: Cargo.toml
crates/goldeneye-crosslink/src/: lib.rs
crates/goldeneye-edit/: Cargo.toml
crates/goldeneye-edit/src/: durable.rs  lib.rs
crates/goldeneye-edit/tests/: durable.rs  operations.rs  validation.rs
crates/goldeneye-full-grammars/: Cargo.toml  build.rs
crates/goldeneye-full-grammars/src/: generated.rs  lib.rs
crates/goldeneye-full-grammars/tests/: compiled_registry.rs
crates/goldeneye-grammar-pack/: Cargo.toml
crates/goldeneye-grammar-pack/src/: git_source.rs  lib.rs
crates/goldeneye-grammar-pack/tests/: materialized_pack.rs
crates/goldeneye-http/: Cargo.toml  build.rs
crates/goldeneye-http/src/: assets.rs  backend.rs  server.rs
crates/goldeneye-index/: Cargo.toml
crates/goldeneye-index/src/: enrichment.rs  extract.rs  hybrid.rs  identity.rs  lib.rs  service.rs  types.rs
crates/goldeneye-index/tests/: fast_index.rs  full_language_corpus.rs  index_modes.rs
crates/goldeneye-mcp/: Cargo.toml
crates/goldeneye-mcp/src/: protocol.rs  server.rs  tools.rs  transport.rs
crates/goldeneye-mcp/tests/: ack_tools.rs  adr_traces.rs  git_changes.rs
crates/goldeneye-query/: Cargo.toml
crates/goldeneye-query/src/: ast_profile.rs  cypher.rs  engine.rs  lib.rs  rotsq.rs  search_code.rs  semantic.rs  semantic_query.rs  similarity.rs  types.rs
crates/goldeneye-query/tests/: architecture.rs  contracts.rs  cypher_core_parity.rs  cypher_multiclause_parity.rs  cypher_scalar_case_parity.rs  query_graph.rs  search.rs  search_code.rs  semantic_search.rs  trace.rs
crates/goldeneye-services/: Cargo.toml
crates/goldeneye-services/src/: adr_traces.rs  edit.rs  lib.rs
crates/goldeneye-services/tests/: adr_traces.rs  services.rs
crates/goldeneye-store/: Cargo.toml
crates/goldeneye-store/src/: lib.rs  schema.rs
crates/goldeneye-store/tests/: adr_traces.rs  git_history.rs  store.rs
crates/goldeneye-syntax/: Cargo.toml
crates/goldeneye-syntax/src/: grammar.rs  inspect.rs  lib.rs  pack.rs
crates/goldeneye-syntax/tests/: core_grammars.rs  diagnostics.rs  full_grammars.rs  grammar_lock.rs  inspect.rs  locators.rs
crates/goldeneye-watcher/: Cargo.toml
crates/goldeneye-watcher/src/: lib.rs
pkg/pypi/: LICENSE  README.md  pyproject.toml
pkg/pypi/tests/: test_cli.py
xtask/: Cargo.toml
xtask/src/: architecture.rs  lib.rs  main.rs
xtask/tests/: full_pack_ci.rs  grammar_sync.rs  provider_generation.rs
(+410 files in other folders)
