[workspace]
members = ["crates/*/*", "xtask"]
resolver = "3"

[workspace.metadata.architecture]
layers = ["domain", "ports", "application", "adapters", "delivery"]
excluded = ["xtask"]
exceptions = [
    "goldeneye-index->goldeneye-syntax",
    "goldeneye-services->goldeneye-artifact",
    "goldeneye-services->goldeneye-discovery",
    "goldeneye-services->goldeneye-git",
    "goldeneye-services->goldeneye-store",
    "goldeneye-services->goldeneye-syntax",
]

[workspace.metadata.architecture.packages]
goldeneye-domain = "domain"
goldeneye-ports = "ports"
goldeneye-crosslink = "application"
goldeneye-edit = "application"
goldeneye-index = "application"
goldeneye-query = "application"
goldeneye-services = "application"
goldeneye-artifact = "adapters"
goldeneye-discovery = "adapters"
goldeneye-full-grammars = "adapters"
goldeneye-git = "adapters"
goldeneye-grammar-pack = "adapters"
goldeneye-store = "adapters"
goldeneye-syntax = "adapters"
goldeneye = "delivery"
goldeneye-compat-tests = "delivery"
goldeneye-http = "delivery"
goldeneye-mcp = "delivery"
goldeneye-watcher = "delivery"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT"
repository = "https://github.com/GoldeneyeZ/goldeneye-tool"

[workspace.dependencies]
atomic-write-file = "=0.3.0"
cap-primitives = "=4.0.2"
cc = "=1.2.67"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
regex = "1.13"
tempfile = "3.27.0"
toml = "0.9"
tree-sitter-language = "=0.1.7"
zstd = "0.13.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
