[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
goldeneye-syntax = { path = "../crates/goldeneye-syntax" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile = "3.23"
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["fs"] }

[lints]
workspace = true
