[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
goldeneye-grammar-pack = { path = "../crates/goldeneye-grammar-pack" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile = "3.23"
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["fs"] }

[dev-dependencies]
syn = { version = "2.0", features = ["full"] }

[lints]
workspace = true
