[package]
name = "goldeneye"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
goldeneye-mcp = { path = "../goldeneye-mcp" }
serde_json.workspace = true

[dev-dependencies]
goldeneye-edit = { path = "../goldeneye-edit" }
goldeneye-index = { path = "../goldeneye-index" }
goldeneye-services = { path = "../goldeneye-services" }
goldeneye-store = { path = "../goldeneye-store" }
goldeneye-syntax = { path = "../goldeneye-syntax" }
tempfile.workspace = true

[lints]
workspace = true
