[package]
name = "goldeneye-edit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
goldeneye-domain = { path = "../goldeneye-domain" }
goldeneye-index = { path = "../goldeneye-index" }
goldeneye-store = { path = "../goldeneye-store" }
goldeneye-syntax = { path = "../goldeneye-syntax" }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
