[package]
name = "goldeneye-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
goldeneye-domain = { path = "../goldeneye-domain" }
goldeneye-index = { path = "../goldeneye-index" }
goldeneye-mcp = { path = "../goldeneye-mcp" }
goldeneye-services = { path = "../goldeneye-services" }
goldeneye-store = { path = "../goldeneye-store" }
goldeneye-watcher = { path = "../goldeneye-watcher" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
