[package]
name = "goldeneye-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
full-grammar-tests = ["goldeneye-syntax/full-grammar-pack"]

[dependencies]
blake3 = "1.8"
goldeneye-discovery = { path = "../goldeneye-discovery" }
goldeneye-domain = { path = "../goldeneye-domain" }
goldeneye-store = { path = "../goldeneye-store" }
goldeneye-syntax = { path = "../goldeneye-syntax" }
serde_json.workspace = true
thiserror.workspace = true
tree-sitter = "=0.26.11"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
