[package]
name = "goldeneye-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
goldeneye-discovery = { path = "../goldeneye-discovery" }
goldeneye-domain = { path = "../goldeneye-domain" }
goldeneye-edit = { path = "../goldeneye-edit" }
goldeneye-git = { path = "../goldeneye-git" }
goldeneye-index = { path = "../goldeneye-index" }
goldeneye-query = { path = "../goldeneye-query" }
goldeneye-store = { path = "../goldeneye-store" }
goldeneye-syntax = { path = "../goldeneye-syntax" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
