[package]
name = "goldeneye-syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cap-primitives.workspace = true
goldeneye-domain = { path = "../goldeneye-domain" }
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
tree-sitter = "=0.26.11"
tree-sitter-go = "=0.25.0"
tree-sitter-javascript = "=0.25.0"
tree-sitter-python = "=0.25.0"
tree-sitter-rust = "=0.24.2"
tree-sitter-typescript = "=0.23.2"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.23"

[lints]
workspace = true
