[package]
name = "goldeneye-syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
goldeneye-domain = { path = "../goldeneye-domain" }
goldeneye-grammar-pack = { path = "../goldeneye-grammar-pack" }
serde.workspace = true
thiserror.workspace = true
tree-sitter = "=0.26.11"
tree-sitter-go = "=0.25.0"
tree-sitter-javascript = "=0.25.0"
tree-sitter-python = "=0.25.0"
tree-sitter-rust = "=0.24.2"
tree-sitter-typescript = "=0.23.2"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.23"
toml.workspace = true

[lints]
workspace = true
