[package]
name = "goldeneye-watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
goldeneye-domain = { path = "../goldeneye-domain" }
goldeneye-services = { path = "../goldeneye-services" }
goldeneye-store = { path = "../goldeneye-store" }
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
