[package]
name = "goldeneye-artifact"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
atomic-write-file.workspace = true
goldeneye-ports = { path = "../../ports/goldeneye-ports" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
