[package]
name = "goldeneye-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
goldeneye-domain = { path = "../../domain/goldeneye-domain" }
goldeneye-ports = { path = "../../ports/goldeneye-ports" }
ignore = "0.4.28"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.20"

[lints]
workspace = true
