[package]
name = "goldeneye-syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["core-grammars"]
core-grammars = [
    "dep:tree-sitter-go",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-python",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-typescript",
]
full-grammar-pack = ["dep:goldeneye-full-grammars"]

[dependencies]
goldeneye-domain = { path = "../../domain/goldeneye-domain" }
goldeneye-full-grammars = { path = "../goldeneye-full-grammars", features = ["compiled"], optional = true }
goldeneye-grammar-pack = { path = "../goldeneye-grammar-pack" }
serde.workspace = true
thiserror.workspace = true
tree-sitter = "=0.26.11"
tree-sitter-go = { version = "=0.25.0", optional = true }
tree-sitter-javascript = { version = "=0.25.0", optional = true }
tree-sitter-python = { version = "=0.25.0", optional = true }
tree-sitter-rust = { version = "=0.24.2", optional = true }
tree-sitter-typescript = { version = "=0.23.2", optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.23"
toml.workspace = true

[lints]
workspace = true
