[package]
name = "goldeneye-crosslink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
goldeneye-domain = { path = "../../domain/goldeneye-domain" }
goldeneye-ports = { path = "../../ports/goldeneye-ports" }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
goldeneye-store = { path = "../../adapters/goldeneye-store" }
tempfile.workspace = true

[lints]
workspace = true
