[package]
name = "goldeneye-edit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
goldeneye-domain = { path = "../../domain/goldeneye-domain" }
goldeneye-index = { path = "../goldeneye-index" }
goldeneye-ports = { path = "../../ports/goldeneye-ports" }
goldeneye-syntax = { path = "../../adapters/goldeneye-syntax" }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
goldeneye-store = { path = "../../adapters/goldeneye-store" }
tempfile.workspace = true

[lints]
workspace = true
