[package]
name = "goldeneye-edit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
goldeneye-domain = { path = "../../domain/goldeneye-domain" }
goldeneye-ports = { path = "../../ports/goldeneye-ports" }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
goldeneye-discovery = { path = "../../adapters/goldeneye-discovery" }
goldeneye-index = { path = "../goldeneye-index" }
goldeneye-store = { path = "../../adapters/goldeneye-store" }
goldeneye-syntax = { path = "../../adapters/goldeneye-syntax" }
tempfile.workspace = true

[lints]
workspace = true
