[package]
name = "goldeneye-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
full-grammar-tests = ["goldeneye-syntax/full-grammar-pack"]

[dependencies]
blake3 = "1.8"
goldeneye-crosslink = { path = "../goldeneye-crosslink" }
goldeneye-domain = { path = "../../domain/goldeneye-domain" }
goldeneye-ports = { path = "../../ports/goldeneye-ports" }
goldeneye-syntax = { path = "../../adapters/goldeneye-syntax" }
serde_json.workspace = true
thiserror.workspace = true
tree-sitter = "=0.26.11"

[dev-dependencies]
goldeneye-discovery = { path = "../../adapters/goldeneye-discovery" }
goldeneye-store = { path = "../../adapters/goldeneye-store" }
tempfile.workspace = true

[lints]
workspace = true
