[package]
name = "goldeneye-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
full-grammar-tests = ["goldeneye-tree-sitter-index/full-grammar-tests"]

[dependencies]
blake3 = "1.8"
goldeneye-crosslink = { path = "../goldeneye-crosslink" }
goldeneye-domain = { path = "../../domain/goldeneye-domain" }
goldeneye-ports = { path = "../../ports/goldeneye-ports" }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
goldeneye-discovery = { path = "../../adapters/goldeneye-discovery" }
goldeneye-store = { path = "../../adapters/goldeneye-store" }
goldeneye-syntax = { path = "../../adapters/goldeneye-syntax" }
goldeneye-tree-sitter-index = { path = "../../adapters/goldeneye-tree-sitter-index" }
tempfile.workspace = true

[lints]
workspace = true
