[package]
name = "goldeneye-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
goldeneye-domain = { path = "../../domain/goldeneye-domain" }
goldeneye-ports = { path = "../../ports/goldeneye-ports" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
goldeneye-store = { path = "../../adapters/goldeneye-store" }
tempfile.workspace = true

[lints]
workspace = true
