[package]
name = "goldeneye-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
goldeneye-crosslink = { path = "../goldeneye-crosslink" }
goldeneye-discovery = { path = "../../adapters/goldeneye-discovery" }
goldeneye-domain = { path = "../../domain/goldeneye-domain" }
goldeneye-edit = { path = "../goldeneye-edit" }
goldeneye-index = { path = "../goldeneye-index" }
goldeneye-ports = { path = "../../ports/goldeneye-ports" }
goldeneye-query = { path = "../goldeneye-query" }
goldeneye-store = { path = "../../adapters/goldeneye-store" }
goldeneye-syntax = { path = "../../adapters/goldeneye-syntax" }
goldeneye-tree-sitter-index = { path = "../../adapters/goldeneye-tree-sitter-index" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
goldeneye-artifact = { path = "../../adapters/goldeneye-artifact" }
goldeneye-git = { path = "../../adapters/goldeneye-git" }
tempfile.workspace = true

[lints]
workspace = true
