[package]
name = "goldeneye-bootstrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
goldeneye-artifact = { path = "../../adapters/goldeneye-artifact" }
goldeneye-discovery = { path = "../../adapters/goldeneye-discovery" }
goldeneye-git = { path = "../../adapters/goldeneye-git" }
goldeneye-services = { path = "../../application/goldeneye-services" }
goldeneye-store = { path = "../../adapters/goldeneye-store" }
goldeneye-syntax = { path = "../../adapters/goldeneye-syntax" }
goldeneye-tree-sitter-index = { path = "../../adapters/goldeneye-tree-sitter-index" }
goldeneye-watcher = { path = "../goldeneye-watcher" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
