[package]
name = "goldeneye"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
goldeneye-artifact = { path = "../../adapters/goldeneye-artifact" }
goldeneye-http = { path = "../goldeneye-http" }
goldeneye-index = { path = "../../application/goldeneye-index" }
goldeneye-mcp = { path = "../goldeneye-mcp" }
goldeneye-services = { path = "../../application/goldeneye-services" }
serde_json.workspace = true

[dev-dependencies]
goldeneye-discovery = { path = "../../adapters/goldeneye-discovery" }
goldeneye-edit = { path = "../../application/goldeneye-edit" }
goldeneye-store = { path = "../../adapters/goldeneye-store" }
goldeneye-syntax = { path = "../../adapters/goldeneye-syntax" }
tempfile.workspace = true

[lints]
workspace = true
