[package]
name = "goldeneye-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
goldeneye-artifact = { path = "../../adapters/goldeneye-artifact" }
goldeneye-domain = { path = "../../domain/goldeneye-domain" }
goldeneye-index = { path = "../../application/goldeneye-index" }
goldeneye-mcp = { path = "../goldeneye-mcp" }
goldeneye-services = { path = "../../application/goldeneye-services" }
goldeneye-store = { path = "../../adapters/goldeneye-store" }
goldeneye-watcher = { path = "../goldeneye-watcher" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
